Fix env var name in documentation

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 MAILREEF_API_KEY=your_mailreef_key_here
 OPENAI_API_KEY=your_openai_key_here
 
-# Google Credentials (JSON content as string or path)
-GOOGLE_CREDENTIALS_JSON={"type": "service_account", ...}
+# Google Credentials (JSON content as string)
+GOOGLE_SHEETS_CREDENTIALS={"token": "...", "refresh_token": "...", "client_id": "...", "client_secret": "..."}
 
 # Optional Configuration
 LOG_LEVEL=INFO
